z-index doesnt fix ui vs showall button, but we have no duplicates of showall button

--- a/index.css
+++ b/index.css
@@ -2,3 +2,11 @@
   width: 100%;
   height: 550px;
 }
+
+.ui-menu {
+	z-index: 10;
+}
+
+.ui-menu-item {
+	z-index: 10;
+}
